--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,7 @@
         <div class="ui three column grid extensionlist">
           <div class="column"><div class="ex-name" data-bind="text: name"></div></div>
           <div class="column"><div class="ex-number" data-bind="text: extension"></div></div>
-          <button class="ui orange basic button "> CALL <span data-bind="text: extension"></span></button>
+          <div class="column"><button class="ui orange basic button callbutton"> CALL <span data-bind="text: extension"></span></button></div>
         </div>
     </div>
   </div>
