--- a/static/index.html
+++ b/static/index.html
@@ -8,16 +8,17 @@
 
 
     <!-- Libraries -->
-    <script src="/bower_components/lodash/lodash.min.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/semantic/semantic.js"></script>
     <script src="/bower_components/knockout/dist/knockout.js"></script>
+    <script src="/bower_components/sip.js/dist/sip.js"></script>
 
     <link rel="stylesheet" type="text/css" href="/css/test.css">
     <link rel="stylesheet" type="text/css" href="/css/sipperinno.css">
 
     <!-- Site / SIP -->
     <script src="/js/services.js"></script>
+    <script src="/js/sip.js"></script>
     <script src="/js/phonetool.js"></script>
 
 
@@ -32,21 +33,29 @@
    </div>
 </div>
 
-<h3 class="ui center aligned header">These are the active extensions for the event, you can also call directly using your browser by signing into CCO.</h3>
+
 <div class="ui container extensions">
+<div class="space"></div>
+<h3 class="ui center aligned header">These are the active extensions for the event, you can also call directly using your browser by signing into CCO.</h3>
+<div class="space"></div>
 
   <div class="ui segments" data-bind="foreach: $root.Extensions">
     <div class="ui segment">
         <div class="ui three column grid extensionlist">
           <div class="column"><div class="ex-name" data-bind="text: name"></div></div>
           <div class="column"><div class="ex-number" data-bind="text: extension"></div></div>
-          <div class="column"><button class="ui orange basic button callbutton" data-bind="attr: { 'data-extension': extension, 'data-destination': name }"> CALL <span data-bind="text: extension"></span></button></div>
+          <div class="column"><button class="ui orange basic button callbutton" data-bind="attr: { 'data-extension': extension, 'data-destination': name }"> CALL <span data-bind="text: extension, attr: { 'data-extension': extension, 'data-destination': name }"></span></button></div>
         </div>
     </div>
   </div>
 </div>
 
 <div class="space"></div>
+<audio id="localAudio" muted="muted">
+</audio>
+
+<audio id="remoteAudio">
+</audio>
 
 <div class="ui basic modal">
   <div class="image content">
@@ -69,10 +78,8 @@
 
 <footer>
 <div class="ui container">
-  <div class="ui three column grid ">
-    <div class="column">POWERED BY <a href="https://github.com/coral/klausroute">KLAUSROUTE</a></div>
-    <div class="column"></div>
-    <div class="column"></div>
+  <div class="ui one column grid ">
+    <div class="column">POWERED BY <a href="https://github.com/coral/klausroute">KLAUSROUTE</a> MADE BY <a href="https://github.com/coral">CORAL</a></div>
   </div>
 </div>
 </footer>
