--- a/static/low.html
+++ b/static/low.html
@@ -7,7 +7,6 @@
 <body>
 
     <!-- Libraries -->
-    <script src="/socket.io/socket.io.js"></script>
     <script src="/bower_components/lodash/lodash.min.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/sip.js/dist/sip.js"></script>
@@ -15,6 +14,10 @@
     <!-- Site / SIP -->
 
     <script src="/js/sip.js"></script>
+
+    <script>
+    ball(100);
+    </script>
 
 
 <video id="localVideo" muted="muted"></video>
